Fix: Alignment of status in the header.

--- a/src/themes/heise/style.css
+++ b/src/themes/heise/style.css
@@ -186,6 +186,7 @@ input {
 }
 
 #status {
+  float: right;
   display: block;
   vertical-align: bottom;
   font-size: .9em;
